--- a/songs/ave-maria.tex
+++ b/songs/ave-maria.tex
@@ -2,7 +2,7 @@
 
   \beginchorus
     \[G]A\[D]ve Ma\[C]ri\[D]a, \[G]gra\[Am]tia \[C]ple\[D]na,
-    \[G]D\_{o}mi\[Am]nus \[D]t\_{e}\[G]cum \[C]b\_{e}ne\[D]d\_{i}cta \[G]tu.
+    \[G]D{\_{o}}mi\[Am]nus \[D]t{\_{e}}\[G]cum \[C]b{\_{e}}ne\[D]d{\_{i}}cta \[G]tu.
   \endchorus
 
   \beginverse\memorize
