--- a/songs/egyutt-fog-ujjongni.tex
+++ b/songs/egyutt-fog-ujjongni.tex
@@ -2,7 +2,7 @@
 
   \beginverse*
     \[H7]Együtt fog ujjongni \[Em]fiatal és öreg is
-    És \[Am]örömében táncot lejt a \[H7]l\_{á}ny.
+    És \[Am]örömében táncot lejt a \[H7]l{\_{á}}ny.
   \endverse
 
   \beginverse*
@@ -15,7 +15,7 @@
   \beginverse*
     \[H7]Gyászukat ünnepre fordítom, s nem búsulnak ezután!
     Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
-    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]ly\_{e}tt!
+    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]ly{\_{e}}tt!
     Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
     Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]lyett!
   \endverse
