--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -21,7 +21,7 @@
   \beginverse
     \[Em]Én Uram, én \[H7]Istenem,
     \[G]Fogadd el az \[D]életem,
-    \[C]Hadd legyen e\[D]gészen a Ti{\[G H7]\_{é}}d!
+    \[C]Hadd legyen e\[D]gészen a Ti{\[G H7]{\_{é}}}d!
   \endverse
 
   \beginverse
