--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -20,7 +20,7 @@
   \endchorus
 
   \beginverse
-    Az ^első napsu^gár, mi a ^dermedt tavaszi ^földre száll. \echo{tavaszi ^földre száll}
+    Az ^első napsu^gár, mi a ^dermedt tavaszi ^földre száll, \echo{tavaszi ^földre száll}
     ^Melegét szórja ^rád, és a ^fák rügyeiket ^kibontják. \echo{^kibontják}
   \endverse
 
