--- a/songs/alleluja.tex
+++ b/songs/alleluja.tex
@@ -19,7 +19,7 @@
   \endchorus
 
   \beginverse\memorize
-    \[D]Krisztus az \[F#m]Úr, erő s \[G]hatalom Ö\[D]vé
+    \[D]Krisztus az \[F#m]Úr, erő s \[G]hatalom Ö\[D]vé,
     \[G]Bátran bízz \[D]benne, hisz’ \[A]mond\[A7]ta:
     ``Ki \[D]újra ko\[F#m]pog, annak \[G]ajtót nyitnak \[D]majd''.
     \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja.
