--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -8,12 +8,12 @@
   \endverse
 
   \beginchorus
-    /: \[F]Tarts meg két ke\[C]zedben, \[A7]őrizz meg U\[Dm]ram,
+    /: \[F]Tarts meg két ke\[C]zedben, \[A7]őrizz meg, U\[Dm]ram,
     \[F]Oltalmadban \[C]rejtsd el sorso\[Dm]mat! \[G] :/ \rep{2}
   \endchorus
 
   \beginverse
-    ^Atyám, két ke^zedben, ^teljes az ö^röm,
+    ^Atyám, két ke^zedben ^teljes az ö^röm,
     ^Ajándékod^ban gyönyörkö^döm! ^
     ^Tékozlóként ^éltem, ^tárva most ka^rod,
     ^Hűtlenségem ^nem hánytorga^tod! ^
@@ -24,9 +24,9 @@
   \endverse
 
   \beginverse
-    ^Atyám, két ke^zedben, ^bátran sírha^tok,
+    ^Atyám, két ke^zedben ^bátran sírha^tok,
     ^Fájdalmaim ^hordozod, ^tudom. ^
-    ^Ott fenn a ke^reszten ^áldó két ke^zed,
+    ^Ott fenn a ke^reszten ^áldó két ke^zed
     ^Bűneimmel ^én szegeztem ^fel! ^
   \endverse
 
