--- a/songs/esti-hala.tex
+++ b/songs/esti-hala.tex
@@ -27,9 +27,9 @@
   \endverse
 
   \beginverse
-    ^Hálá^t adok, hogy ^Tested ^táplál,
+    ^Hálá^t adok, hogy ^Tested ^táplált,
     % Igéd
-    ^Hálá^t, hogy ma is ^szól sza^vad.
+    ^Hálá^t, hogy ma is ^szólt sza^vad.
     ^Hálá^t adok, hogy ^lelkem ^biztos
     ^Cél fe^lé ha^lad.
   \endverse
