--- a/songs/hazamegy-a-vandor.tex
+++ b/songs/hazamegy-a-vandor.tex
@@ -26,9 +26,9 @@
   \endverse
 
   \beginverse*
-    Mert \[E]új eget, és egy új \[G#m]f\_{ö}ldet \[F#]v\_{á}runk,
-    \[E]Új folyókban úszunk majd, és \[G#m]új hegyeket \[F#]m\_{á}szunk.
-    \[E] Ez a bolygó nem az \[G#m]igazi vi\[F#]l\_{á}gunk.
+    Mert \[E]új eget, és egy új \[G#m]f{\_{ö}}ldet \[F#]v{\_{á}}runk,
+    \[E]Új folyókban úszunk majd, és \[G#m]új hegyeket \[F#]m{\_{á}}szunk.
+    \[E] Ez a bolygó nem az \[G#m]igazi vi\[F#]l{\_{á}}gunk.
     Itt csak \[E]utazunk, át\[F#]utazunk.
   \endverse
 
