--- a/songs/ime-az-isten-satora.tex
+++ b/songs/ime-az-isten-satora.tex
@@ -12,13 +12,13 @@
   \endverse
 
   \beginchorus
-    /: \[Em]J\_{é}zus, Te \[D]vagy a Király!
-    \[Em]J\_{é}zus, Te \[D]vagy a Ki\[Em]rály! :/ \rep{2} \[Hm]
+    /: \[Em]J{\_{é}}zus, Te \[D]vagy a Király!
+    \[Em]J{\_{é}}zus, Te \[D]vagy a Ki\[Em]rály! :/ \rep{2} \[Hm]
   \endchorus
 
   \beginverse
     ^Isten letörli a ^könnyeket az ^ő szemeik^ről.
-    ^Halál nem lesz már ^t\_{ö}bbé, sem ^gyász, sem fájda^lom. ^
+    ^Halál nem lesz már ^t{\_{ö}}bbé, sem ^gyász, sem fájda^lom. ^
   \endverse
 
   \beginverse*
