--- a/songs/itt-vagyok-most-jo-uram.tex
+++ b/songs/itt-vagyok-most-jo-uram.tex
@@ -8,8 +8,8 @@
   \endverse
 
   \beginchorus
-    Szeret\[Em7]lek, ó, U\[A7]ram, hálám \[D]szívemből fak\[G]ad, hiszen
-    \[Em7]Mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D7]nagy!
+    Szeret\[Em7]lek, ó, U\[A7]ram, hálám \[D]szívemből fak\[G]ad,
+    Hiszen \[Em7]mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D7]nagy!
     Szeret\[Em7]lek, ó, U\[A]ram, hálám \[D]szívemből fak\[G]ad,
     És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy, U\[D]ram!
   \endchorus
