Changed titles in favor of better ordering

--- a/songs/halat-adok-az-esti-oran.tex
+++ b/songs/halat-adok-az-esti-oran.tex
@@ -1,6 +1,6 @@
-\beginsong{Esti hála}
+\beginsong{Hálát adok az esti órán}
 [
-  index={Hálát adok az esti órán}
+  ititle={Esti hála}
 ]
 
   % / jelek után: https://www.youtube.com/watch?v=ggrTwNKP5Ew
