--- a/songs/halat-adok-hogy-itt-a-reggel.tex
+++ b/songs/halat-adok-hogy-itt-a-reggel.tex
@@ -1,6 +1,6 @@
-\beginsong{Reggeli hála}
+\beginsong{Hálát adok, hogy itt a reggel}
 [
-  index={Hálát adok, hogy itt a reggel}
+  ititle={Reggeli hála}
 ]
 
   \beginverse\memorize
