Updated logo for more general use

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -62,7 +62,7 @@
     \setlength{\oddsidemargin}{-1.3cm}
 
     \vspace*{0.75cm}
-    \includegraphics[width=11cm]{Logo_07_final}
+    \includegraphics[width=11cm]{Logo_songbook}
 
     \thispagestyle{empty}
   \end{titlepage}
