--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -1,19 +1,25 @@
 \beginsong{Jézus a mi oltalmunk}[]
 
-  \versesep=12pt plus 3pt minus 8pt
+  \versesep=12pt plus 3pt minus 12pt
+  
+  \ifchorded
+    \beginverse*
+       {\nolyrics Előjáték: \[F] \[C] \[Dm] \[A]\[A#-C] \[F] \[A] \[Dm]}
+    \endverse
+  \fi
 
   \beginchorus
-    \[Dm]Jézus a mi \[A]oltalmunk, \[Dm]erőssé\[C]günk,
+    \[Dm]Jézus a mi \[A]oltalmunk, \[Dm]erőss\_{é}\[C]günk,
     Ha \[F]ránk szakad \[C]minden baj, \[Dm]mégse \[A]fé\[Dm]lünk!
-    \[Dm]Ő a mi \[A]páncélunk, \[Dm]erős paj\[C]zsunk,
+    \[Dm]Ő a mi \[A]páncélunk, \[Dm]erős p\_{a}j\[C]zsunk,
     Ha \[F]ránk tör az \[C]ellenség, \[Dm]Benne \[A]bí\[Dm]zunk!
   \endchorus
 
   \beginverse\memorize
     \[F]Ez a föld szét\[C]hullik, \[Dm]minden hegy el\[A]omlik,
-    \[B]De egy \[F]kőszikla \[C]örökké \[F]áll!
+    \[A#]De egy \[F]kőszikla \[C]örökké \[F]áll!
     \[F]Tajtékzik a \[C]tenger, \[Dm]gyilkol a sok \[A]fegyver,
-    \[B]Né\[C]künk \[F]mégsem árt \[A]a ha\[Dm]lál!
+    \[A#]Né\[C]künk \[F]mégsem árt \[A]a ha\[Dm]lál!
   \endverse
 
   \beginverse*
@@ -21,9 +27,9 @@
   \endverse
 
   \beginverse
-    ^Eladó már ^minden, ^örömöd még^sincsen,
+    ^Eladó már ^minden, ^örömöd még ^sincsen,
     ^Ha ez a ^forrás ^nem árad ^rád!
-    ^Ő az, aki ^ingyen ^od'adott már ^mindent,
+    ^Ő az, aki ^ingyen ^már od'adott ^mindent,
     ^Ér^tünk ^áldozva ^Önma^gát!
   \endverse
 
@@ -34,7 +40,7 @@
   \beginverse
     ^Fogták, elí^télték ^és megfeszí^tették
     ^Isten ^Fiát mi^helyet^tünk!
-    ^Nincs már í^télet, ^vád sohasem ^érhet,
+    ^Nincs már \_{í}^télet, ^vád sohasem ^érhet,
     ^Vé^re ^eltörölt ^minden ^bűnt!
   \endverse
 
