--- a/songs/jezus-nez-ram.tex
+++ b/songs/jezus-nez-ram.tex
@@ -16,8 +16,8 @@
   \endverse
 
   \beginchorus
-    /: \[C]Jézus \[H7]arra \[E]kér, mert \[C]bennünk \[H7]emberekben \[E]él, hogy
-    \[C]meglás\[C7]sam és \[F]szeressem, ha \[C]eljön hozzám \[G7]valaki\[C]ben. \[G$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{0.4cm}\fi:/ \rep{2}}
+    /: \[C]Jézus \[H7]arra \[E]kér, mert \[C]bennünk \[H7]emberekben \[E]él,
+    Hogy \[C]meglás\[C7]sam és \[F]szeressem, ha \[C]eljön hozzám \[G7]valaki\[C]ben. \[G$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{0.4cm}\fi:/ \rep{2}}
     % vagy inkább \quad ?
   \endchorus
 
