--- a/songs/jojj-hivunk-jojj.tex
+++ b/songs/jojj-hivunk-jojj.tex
@@ -2,7 +2,7 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[E] \[E] \[E] \[E] \[C#m] \[F#m] \[A] \[H] \[A] \[H]}
+       {\nolyrics Előjáték: \[E]\[C#m] \[F#m] \[A] \[H] \[A] \[H]}
     \endverse
   \fi
 
@@ -12,9 +12,9 @@
   \endverse
 
   \beginchorus
-    Úgy \[A]vá\[E]runk és ki\[A]ál\[E]tunk:
+    Úgy \[A]v\_{á}\[E]runk és ki\[A]{\_{á}}l\[E]tunk:
     /: Áradj \[H]szét! \echo{Vigasztaló}
-    Áradj \[A]szét! \echo{Szabadító}
+    \_{Á}radj \[A]szét! \echo{Szabadító}
     Áradj \[E]szét! :/ \rep{2}
   \endchorus
 
