--- a/songs/jojj-itt-az-ido.tex
+++ b/songs/jojj-itt-az-ido.tex
@@ -18,7 +18,7 @@
   \endverse
 
   \beginchorus
-    /: \[G]Minden nyelv megvallja, hogy \[D]Ő az Úr! \[G]És mindenki térdet \[D]hajt!
+    /: \[G]Minden nyelv megv\_{a}llja, hogy \[D]Ő az Úr! \[G]És mindenki t\_{é}rdet \[D]hajt!
     De a \[G]legnagyobb kincs mégis \[Hm]azokra vár, kik \[Em]most Őt válasz\[A4]tják! \[A] :/ \rep{2}
   \endchorus
 
