--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -7,8 +7,8 @@
   \fi
 
   \beginverse\memorize
-    Kész az \[Dm]én szívem, Uram, \[Gm]Néked zeng a \[Dm]dalom.
-    Elő hát hárfa, lant, hadd kel\[C]tsem fel a haj\[A]nalt! \[A4] \[A]
+    Kész az \[Dm]én sz\_{í}vem, Uram, \[Gm]Néked zeng a \[Dm]dalom.
+    Elő hát hárfa, lant, hadd kel\[C]tsem fel a h\_{a}j\[A]nalt! \[A4] \[A]
   \endverse
 
   \beginchorus
@@ -18,7 +18,7 @@
 
   \beginverse
     Igaz^ság, hatalom igéd ^minden egyes ^szava.
-    Szívemben rejtem el, soha ^el ne felej^tsem! ^ ^
+    Szívemben rejtem el, soha ^el ne fel\_{e}j^tsem! ^ ^
   \endverse
 
   \beginchorus
