--- a/songs/kiraly-vagy.tex
+++ b/songs/kiraly-vagy.tex
@@ -2,14 +2,15 @@
 
   \beginverse*
     /: \[D]Király vagy, \echo{Király vagy}
-    \[A]Király vagy, \echo{Király v\[Hm]agy}
+    \[A]Király v\_{a}gy, \echo{Király v\[Hm]{\_{a}}gy}
     Jézus Ki\[G]rály. :/ \rep{2}
   \endverse
 
   \beginverse*
     /: Most \[D]felemeljük a szívünket,
     Most \[A]felemeljük kezeinket,
-    \[Hm]Trónod elé járulunk, imádva \[G]légy! :/ \rep{2}
+    \[Hm]Trónod elé járul\_{u}nk, imádva \[G]légy! :/ \rep{2}
   \endverse
 
 \endsong
+
