--- a/songs/koszonom-jezus.tex
+++ b/songs/koszonom-jezus.tex
@@ -1,30 +1,30 @@
 \beginsong{Köszönöm, Jézus}[]
 
   \beginverse\memorize
-    \[D] Köszönöm, Jézus, köszönöm, Jézus,
+    \[D] Köszönöm, J\_{é}zus, köszönöm, J\_{é}zus,
     Köszönöm, U\[G]ram, hogy szeretsz en\[D]gem!
-    Köszönöm, \[F#m]Jézus, köszönöm, \[Hm]Jé\[G]zus,
+    Köszönöm, \[F#m]J{\_{é}}zus, köszönöm, \[Hm]J{\_{é}}\[G]zus,
     Köszönöm, U\[D]ram, \[A] hogy szeretsz en\[D]gem! \[G] \[D]
   \endverse
 
   \beginverse
-    ^ A Golgotára ment, és meghalt értem;
+    ^ A Golgotára ment, és meghalt \_{é}rtem;
     Köszönöm, U^ram, hogy szeretsz en^gem!
-    A Golgo^tára ment, és meghalt ^ér^tem;
+    A Golgo^tára ment, és meghalt ^{\_{é}}r^tem;
     Köszönöm, U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
   \beginverse
-    ^ A harmadik napon Ő feltámadott;
+    ^ A harmadik napon Ő f\_{e}ltámadott;
     Köszönöm, U^ram, hogy szeretsz en^gem!
-    A harma^dik napon Ő fel^táma^dott;
+    A harma^dik napon Ő f\_{e}l^táma^dott;
     Köszönöm, U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
   \beginverse
-    ^ Ó, alleluja, ó, alleluja!
+    ^ Ó, allel\_{u}ja, ó, allel\_{u}ja!
     Köszönöm, U^ram, hogy szeretsz en^gem!
-    Ó, alle^luja, ó, alle^lu^ja!
+    Ó, alle^l\_{u}ja, ó, alle^l{\_{u}}^ja!
     Köszönöm, U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
