--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -2,27 +2,27 @@
 
   \beginverse\memorize
     \[C] Látod, újra este van, Hozzád száll most \[C/H]halk sza\[Am]vam,
-    \[Dm] Mindenségnek Iste\[F]ne, \[G] Téged dicsér éne\[C]kem.
+    \[Dm] Mindenségnek Iste\[F]n{\_{e}}, \[G] Téged dicsér éne\[C]kem.
   \endverse
 
   \beginverse
     ^ Köszönöm ezt a napot, annyi szépet s ^jót ho^zott.
-    ^ Köszönöm a napsü^té^st, fényét szórta szerte^szét.
+    ^ Köszönöm a napsü^t\_{é}^st, fényét szórta szerte^szét.
   \endverse
 
   \beginchorus
     \[C]Kérlek, ó jó Uram, \[Dm]add meg, fényeddé \[F]váljak, jeled le\[C]hessek!
-    \[C]Kérlek, Szentlelked \[Dm]küldd el, Ő ve\[F]zessen \[G]végig élete\[C]men!
+    \[C]Kérlek, Szentl\_{e}lked \[Dm]küldd el, \_{Ő} ve\[F]zessen \[G]végig élete\[C]men!
   \endchorus
 
   \beginverse
     ^ Uram, mindent köszönök, bánatot é^s örö^möt,
-    ^ Legyen rajtam szent ke^ze^d, óvja, védje éle^tem!
+    ^ Legyen rajtam szent ke^z\_{e}^d, óvja, védje éle^tem!
   \endverse
 
   \beginverse
     ^ Szeretném, ha szeretnél, minden szavad ^érte^ném,
-    ^ Életemben követ^né^m, s végül Hozzád érkez^ném.
+    ^ Életemben követ^n{\_{é}}^m, s végül Hozzád érkez^ném.
   \endverse
 
   \beginverse*
