--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -9,7 +9,7 @@
   \fi
 
   \beginchorus
-    Lelkem, \[G]áldd az Ur\[D]at, \[A/C#]áldd az U\[Hm]rat,
+    Lelkem, \[G]áldd az Ur\[D]at, \[A/C#]{\_{á}}ldd az U\[Hm]rat,
     \[G]Egyedül \[D]Őt im\[A4]ádd! \[A]
     Zengj úgy, \[G]mint soha \[Hm]még, \[G]Őt \[A]di\[Hm]csérd!
     A l\[G]elkem csak T\[A]éged \[G/D]áld! \[D] \[G/D] \[D]
@@ -18,7 +18,7 @@
   \beginverse\memorize
     Egy \[G]új nap k\[D]él, és már \[A]ébred \[Hm]minden,
     \[G] Itt az id\[D]ő, hogy \[A]áldja\[Hm]lak,
-    És \[G]bármi \[D]ér, bármit r\[A]ejt az út előt\[Hm]tem,
+    És \[G]bármi \[D]ér, bármit r\[A]ejt az út el\_{ő}t\[Hm]tem,
     \[G] Hadd zengjek \[D]este is majd \[A4]há\[A]lá\[D]val. \[D4] \[D]
   \endverse
 
@@ -29,7 +29,7 @@
   \beginverse
     ^ Kegyelmed ^nagy, és tü^relmed ^hosszú,
     ^ Szerelmed ^mély, és az ^égig ^ér,
-    Nem ^szűnök ^énekelni ^jósá^godról,
+    Nem ^szűnök ^énekelni ^jósá^g{\_{o}}dról,
     ^ Tízezer ^okom van, hogy ^zeng^jek ^még. ^ ^
   \endverse
 
@@ -40,7 +40,7 @@
   \beginverse
     ^ És egy nap ^majd ez a ^test el^gyengül,
     ^ Erőm el^hagy, s utam ^véget ^ér,
-    A ^lelkem ^mégis Téged ^áld vég ^nélkül:
+    A ^lelkem ^mégis Téged ^áld vég ^n{\_{é}}lkül:
     ^ Tízezer ^évig és mind^örö^kké! ^ ^ ^
   \endverse
 
