--- a/songs/loyolai-szent-ignac-imaja.tex
+++ b/songs/loyolai-szent-ignac-imaja.tex
@@ -10,23 +10,23 @@
   \fi
 
   \beginverse\memorize
-    \[C]Fogadd el, \[G]Uram, \[Am]szabadságo\[F]mat, \[C]fogadd el \[G]egé\[C]szen! \[G]
-    \[C] Vedd értel\[G]memet, \[Am]akarato\[F]mat, és \[C]emlé\[G]kezé\[C]sem!
+    \[C]Fogadd el, \[G]Uram, \[Am]szabadságo\[F]mat, \[C]fogadd el \[G]eg{\_{é}}\[C]szen! \[G]
+    \[C] Vedd értel\[G]memet, \[Am]akarato\[F]mat, és \[C]emlé\[G]kez{\_{é}}\[C]sem!
   \endverse
 
   \beginverse
-    ^Mindazt, amim ^van ^és ami ^vagyok, ^Te adtad ^in^gyen.^
-    ^Visszaadok, ^Uram, ^visszaa^dok ^egyszerre ^min^dent.
+    ^Mindazt, amim ^van ^és ami ^vagyok, ^Te adtad ^{\_{i}}n^gyen.^
+    ^Visszaadok, ^Uram, ^visszaa^dok ^egyszerre ^m\_{i}n^dent.
   \endverse
 
   \beginchorus
     \[Am]Legyen \[E7]fölöttük \[Am]korlátlan \[F]úr \[C]rendel\[G]kezé\[C]sed!
-    Csak \[Am]egyet \[E7]hagyj meg \[Am]ajándéko\[D7]dul: \[G]szeretnem \[F]Té\[Em]ged! \[G7]
+    Csak \[Am]egyet \[E7]h{\_{a}}gyj meg \[Am]ajándéko\[D7]dul: \[G]szeretnem \[F]T{\_{é}}\[Em]ged! \[G7]
   \endchorus
 
   \beginverse
-    ^Csak a ^szeretet ^maradjon e^nyém a ^kegye^lem^mel, ^
-    S ^minden, de ^minden ^gazdagság e^nyém, más ^semmi ^nem ^kell!
+    ^Csak a ^szeretet ^maradjon e^nyém a ^kegye^l{\_{e}}m^mel, ^
+    S ^minden, de ^minden ^gazdagság e^nyém, más ^semmi ^n{\_{e}}m ^kell!
   \endverse
 
   \ifchorded
