--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -2,7 +2,7 @@
 
   \beginverse\memorize
     \[C] Látod, újra este van, Hozzád száll most \[C/H]halk sza\[Am]vam,
-    \[Dm] Mindenségnek Iste\[F]n{\_{e}}, \[G] Téged dicsér éne\[C]kem.
+    \[Dm] Mindenségnek Iste\[F]n\[G]{\_{e}}, Téged dicsér éne\[C]kem.
   \endverse
 
   \beginverse
@@ -27,10 +27,3 @@
 
   \beginverse*
     Refrén
-  \endverse
-
-  \beginverse*
-    1. versszak \ifchorded{\nolyrics (Csak lehúzásokkal.)}\fi
-  \endverse
-
-\endsong
