--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -15,7 +15,7 @@
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
-    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már!
+    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn m\_{á}r!
     \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
     \[G]Uram, \[H7]irgal\[Em]mazz!
   \endchorus
@@ -27,7 +27,7 @@
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
-    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már!
+    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn m\_{á}r!
     \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
     \[G]Krisztus, \[H7]kegyel\[Em]mezz!
   \endchorus
@@ -39,7 +39,7 @@
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
-    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már!
+    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn m\_{á}r!
     \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
     \[G]Uram, \[H7]irgal\[Em]mazz!
   \endchorus
