--- a/songs/mert-tudom.tex
+++ b/songs/mert-tudom.tex
@@ -1,19 +1,19 @@
 \beginsong{Mert tudom}[]
 
   \beginverse*\memorize
-    Mert tu\[D]dom, semmi \[G]nem szakaszthat \[D]el az én \[G]Uram szerelmé\[D]től.
-    Sem élet, sem ha\[G]lál nem választ \[D]el, sem \[G]ma, sem \[D]holnap.
+    Mert tu\[D]d{\_{o}}m, semmi \[G]nem szakaszthat \[D]el az én \[G]Uram szerelmé\[D]től.
+    S\_{e}m \_{é}let, sem ha\[G]lál nem választ \[D]el, sem \[G]m{\_{a}}, s\_{e}m \[D]holnap.
   \endverse
 
   \beginchorus
     Mert az \[D]angyalok \[G]visznek Őhoz\[D]zá,
-    S a po\[F#m]kol e\[Hm]rői sem \[G]állítnak \[A]meg. \[A4] \[A]
+    S a po\[F#m]kol e\[Hm]r{\_{ő}}i sem \[G]állítnak \[A]meg. \[A4] \[A]
     Nem \[G]számít, ha hegyte\[D]tőn állok meg, vagy a \[Hm]sík ten\[G]ger part\[A]ján,
-    Mert az \[D]Úr alkotta \[Hm]mindezt, és \[G]minden az Ö\[A]vé.
+    Mert az \[D]{\_{Ú}}r alkotta \[Hm]m{\_{i}}ndezt, és \[G]minden az Ö\[A]vé.
   \endchorus
 
   \beginverse*
-    És tu^dom, semmi ^nem szakaszthat ^el az én ^Uram szerelmé^től.
+    És tu^d{\_{o}}m, semmi ^nem szakaszthat ^el az én ^Uram szerelmé^től.
   \endverse
 
 \endsong
