--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -2,10 +2,10 @@
   \versesep=12pt plus 3pt minus 8pt
 
   \beginchorus
-    \[D]Minden, mi él, csak Téged hirdet,
-    \[Hm]Minden dicsér, mert mind a műved,
-    \[G]Azzal, hogy él, ezt zengi Néked:
-    \[A]Dicsérlek én, \[A7]dicsérlek Téged!
+    \[D]Minden, mi él, csak Téged h\_{i}rdet,
+    \[Hm]Minden dicsér, mert mind a m\_{ű}ved,
+    \[G]Azzal, hogy él, ezt zengi N\_{é}ked:
+    \[A]Dicsérlek én, \[A7]dicsérlek T\_{é}g\_{e}d!
   \endchorus
 
   \beginverse\memorize
@@ -23,7 +23,7 @@
     ^Dicsér a Föld, dicséri szent neved,
     ^Mint jó anyánk, táplál s ad eledelt.
     ^Virág, gyümölcs, zöld fű, fa, hegyvidék,
-    ^Tó és folyó, ^síkság és büszke bérc!
+    ^Tó és folyó, ^síkság és büszke b\_{é}rc!
   \endverse
 
   \beginverse*
@@ -34,7 +34,7 @@
     ^A nagy világ létével énekel,
     ^Szavunkra vár, hogy hangja dal legyen.
     ^Zengjük tehát ég és föld énekét,
-    ^Zengjük velük: ^nagy Isten áldott légy!
+    ^Zengjük velük: ^nagy Isten áldott l\_{é}gy!
   \endverse
 
   \beginverse*
