--- a/songs/minden-nap.tex
+++ b/songs/minden-nap.tex
@@ -14,7 +14,7 @@
     \[D] Mit is \[A]mondhatnék, \[F#m] Te vagy, ki \[E]megváltottál,
     \[D] Drága \[A]véreddel \[F#m] hófe\[E]hérre mostál,
     \[D] Minden\[A]em lettél, \[F#m] Tiéd az \[E]egész lényem,
-    \[D] Ég a \[A]tűz bennem, \[F#m] csak \[E]Érted élek \[A]már! \[D] \[F#m] \[E]
+    \[D] Ég a \[A]tűz bennem, \[F#m] csak \[E]Érted élek \[A]m{\_{á}}r! \[D] \[F#m] \[E]
   \endverse
 
   \ifchorded
@@ -25,9 +25,9 @@
 
   \beginverse
     ^ Minden ^nap, Uram, ^ ráál^lok igédre,
-    ^ Téged ^hívlak, ^ légy a ^segítségem,
+    ^ Téged ^hívl\_{a}k, ^ légy a ^segítségem,
     ^ Vezess ^át engem, ^ tovább a ^keskeny úton,
-    ^ Add, hogy ^életem ^ a világban ^tüzet gyújtson!
+    ^ Add, hogy ^életem ^ a világban ^tüzet gy\_{ú}jts\_{o}n!
   \endverse
 
   \beginchorus
@@ -37,7 +37,7 @@
   \endchorus
 
   \beginverse*
-    /: \[A]Érted \[D]élek \[F#m]minden \[E]nap! :/ \rep{3}
+    /: \[A]Érted \[D]élek \[F#m]minden \[E]n{\_{a}}p! :/ \rep{3}
     U\[A]ram! \[D] \[F#m] \[E]
   \endverse
 
