--- a/songs/mint-az-asszony.tex
+++ b/songs/mint-az-asszony.tex
@@ -2,8 +2,8 @@
 
   \beginverse*\memorize
     Mint az \[A]asszony az Ő \[E/G#]ruhája szegé\[F#m]lyét, \[F#m/E]
-    Megragad\[D]juk \[D/C#] az Úr je\[Hm]lenlé\[E]tét.
-    Mint a \[A]vak koldus az \[E/G#]út szé\[F#m]lén, \[F#m/E]
+    Megragad\[D]juk \[D/C#] az Úr je\[Hm]lenl{\_{é}}\[E]tét.
+    Mint a \[A]vak koldus az \[E/G#]{\_{ú}}t sz\_{é}\[F#m]lén, \[F#m/E]
     Kiál\[D]tunk, \[D/C#] s fu\[Hm]tunk az Úr e\[E]lé.
   \endverse
 
@@ -11,7 +11,7 @@
     És \[A]hirtelen \[E] egy mennyei \[D]kéz megáld, \[D/C#]
     \[Hm]Jézus az, \[E] aki megse\[A]gít! \[E]
     És \[A]hirtelen \[E] a mennyei \[D]erő leszáll, \[D/C#]
-    \[Hm]Jézus jön \[E] s meggyó\[A]gyít!
+    \[Hm]Jézus jön \[E] s meggy\_{ó}\[A]gyít!
   \endchorus
 
 \endsong
