--- a/songs/most-nem-sietek.tex
+++ b/songs/most-nem-sietek.tex
@@ -10,13 +10,13 @@
 
   \beginchorus
     \[G]Most nem teszek \[D]semmit sem,
-    Csak \[C]engedem, hogy \[D]szeressen az \[G]Isten.
+    Csak \[C]engedem, hogy \[D]szeressen az \[G]Ist\_{e}n.
     \[G]Most nem teszek \[D]semmit sem,
     \[G]Csak engedem, hogy \[H7]szeressen az \[Em]Isten.
   \endchorus
 
   \beginverse
-    ^Most megnyug^szom, most elpihe^nek,
+    ^Most m\_{e}gnyug^szom, most elpihe^nek,
     ^Békén, szaba^don, ^mint gyenge gye^rek,
     Nem, nem teszek ...
   \endverse
