--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -7,7 +7,7 @@
   \fi
 
   \beginverse\memorize
-    \[D]Fivérem \[F#m]Nap és \[G]nő\[A]vérem \[D]Hold,
+    \[D]Fivérem \[F#m]Nap és \[G]n{\_{ő}}\[A]vérem \[D]Hold,
     \[Hm]Oly' ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
     \[Hm] Nyomaszt a \[F#m]sok \[G]gyötre\[A]lem és \[D]gond.
   \endverse
@@ -19,20 +19,20 @@
   \fi
 
   \beginverse
-    ^Fivérem ^Szél és ^Le^vegő^ég,
+    ^Fivérem ^Szél és ^Le^veg\_{ő}^ég,
     ^ Nyisd ki sze^mem, hogy ^lássam, ^ami ^szép!
     ^ Körülö^lel a ^ragyo^gás, dics^fény.
   \endverse
 
   \beginchorus
-    \[Hm]Mert Isten \[F#m]műve \[G]minden \[A]teremt\[D]mény,
+    \[Hm]Mert Isten \[F#m]m{\_{ű}}ve \[G]minden \[A]teremt\[D]mény,
     \[Hm] Érzem jó\[F#m]ságát, és \[G]szívem újra {\[A4 A]é}l!
   \endchorus
 
   \beginverse
-    ^Fivérem ^Nap és ^nő^vérem ^Hold,
+    ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
     ^Most végre ^látok, s ^hallom ^hango^tok!
-    ^ Megölel^ném az ^egész ^vilá^got!
+    ^ Megölel^ném az ^egész ^vil\_{á}^got!
   \endverse
 
   \beginverse*
@@ -40,9 +40,9 @@
   \endverse
 
   \beginverse*
-    ^Fivérem ^Nap és ^nő^vérem ^Hold,
+    ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
     ^Most végre ^látok, s ^hallom ^hango^tok!
-    ^ Megölel^ném az ^egész ^vilá\[Gm]got! \[Gm7] ^
+    ^ Megölel^ném az ^egész ^vil\_{á}\[Gm]got! \[Gm7] ^
   \endverse
 
 \endsong
