--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -10,9 +10,9 @@
   \beginverse\memorize
     \[A]Viruló réteken \[D]át \[G]hűs forrás fe\[A]lé vezetlek,
     \[Hm]Pásztorod va\[Em]gyok, elveszni \[A]senkit nem ha\[D]gyok.
-    Karom fe\[Hm]léd tá\[Em]rom, kiárad \[G]áldá\[D]som.
+    Karom fe\[Hm]léd t\_{á}\[Em]rom, kiárad \[G]áld\_{á}\[D]som.
     \[Hm]Nem rejtőzöm \[Em]el, szívem a \[A]szívednek fe\[D]lel,
-    Amikor \[Hm]úgy ér\[Em]zed, nyomaszt a \[A7]é\[D]let.
+    Amikor \[Hm]úgy \_{é}r\[Em]zed, nyomaszt a \[A7]{\_{é}}\[D]let.
   \endverse
 
   \beginverse*
@@ -22,9 +22,9 @@
   \beginverse
     ^Nem taszítalak ^el, ^amikor vétke^zel,
     Irgalmat ^lelsz a szívem^ben, örök fe^léd a hűsé^gem,
-    Amerre ^jársz, vé^dlek, nyomodba ^lé^pek.
+    Amerre ^jársz, v\_{é}^dlek, nyomodba ^l{\_{é}}^pek.
     ^Nem rejtőzöm ^el, szeretet^lángom átö^lel,
-    Ne félj, ha ^éjben ^jársz, hidd, hogy a ^fény vár ^rád!
+    Ne félj, ha ^éjb{\_{e}}n ^jársz, hidd, hogy a ^fény v\_{á}r ^rád!
   \endverse
 
   \beginverse*
