--- a/songs/neked-hodolok.tex
+++ b/songs/neked-hodolok.tex
@@ -3,8 +3,8 @@
   \beginverse*
     \[A]Néked hódo\[Hm]lok Jé\[E]zus, dicső Ki\[A]rály! \[D] \[E]
     \[A]Néked hódo\[Hm]lok Jé\[E]zus, dicső Ki\[A]rály!
-    Ujjongj, da\[Hm]lolj szív\[E]em, és imádjad \[A]Őt!
-    \[F#m] Ujjongj, da\[Hm]lolj szív\[E]em, és imádjad \[A]Őt!
+    Ujjongj, da\[Hm]lolj szív\[E]{\_{e}}m, és imádjad \[A]Őt!
+    \[F#m] Ujjongj, da\[Hm]lolj szív\[E]{\_{e}}m, és imádjad \[A]Őt!
   \endverse
 
 \endsong
