--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -15,7 +15,7 @@
   \endverse
 
   \beginverse*
-    /: \[E]Hála legyen, hála legyen, hála, \[A]áldott az \[E]Úr! :/ \rep{3}
+    /: \[E]Hála legyen, hála legyen, hála! \[A]Áldott az \[E]Úr! :/ \rep{3}
   \endverse
 
   \ifchorded
@@ -64,7 +64,7 @@
 
   \beginverse
     ^Hála, di^cső^ség Ne^ved^nek, ^ ^ ^ ^
-    ^Most és ö^rök^ké az ^é^gen, a ^Föl^dön! A^men. ^ ^ ^ ^ \[A]
+    ^Most és ö^rök^ké az ^é^gen, a ^Föl^dön! \_{A}^men. ^ ^ ^ ^ \[A]
   \endverse
 
 \endsong
