--- a/songs/ott-lelegzel-a-fakban.tex
+++ b/songs/ott-lelegzel-a-fakban.tex
@@ -7,13 +7,13 @@
   \fi
 
   \beginverse\memorize
-    \[D]Ott lélegzel a \[A]fák\[D]ban, \[G]ott mosolyogsz a vi\[A]rágban,
-    \[A]Ott vagy a szélben, a \[D]frissben, ó, boldog, boldog \[A7]Is\[D]ten!
+    \[D]Ott lélegzel a \[A]f{\_{á}}k\[D]ban, \[G]ott mosolyogsz a vi\[A]r{\_{á}}gban,
+    \[A]Ott vagy a szélben, a \[D]fr{\_{i}}ssben, ó, boldog, b\_{o}ldog \[A7]{\_{I}}s\[D]ten!
   \endverse
 
   \beginverse
-    ^Szép sorsomat Te ^sző^tted, ^jó leborulni e^lőtted,
-    ^Te vagy az útnak a ^vége, szent mélység, áldott ^bé^ke!
+    ^Szép sorsomat Te ^sz{\_{ő}}^tted, ^jó leborulni e^l{\_{ő}}tted,
+    ^Te vagy az útnak a ^v{\_{é}}ge, sz\_{e}nt mélység, \_{á}ldott ^b{\_{é}}^ke!
   \endverse
 
 \endsong
