--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -3,19 +3,19 @@
   \beginverse\memorize
     \[Em]Sírásodat hagyd nyugodtan abba,
     A kapuk mögött vissza\[Em/F#]állt a \[G]rend!
-    \[Am]Ne sírj, oly' lágyan jár a \[Em]szél
+    \[Am]Ne sírj, oly' lágyan jár a \[Em]sz{\_{é}}l
     \[C]Róma s a \[D]Via Appia fe\[Em]lett!
   \endverse
 
   \beginchorus
     \[Am]Péter, ne \[Em]sírj, mert \[H7]Jézus megbo\[Em]csát,
-    \[Am]Péter, ne \[Em]sírj, hisz' \[H7]tudod, hogy megbo\[Em]csát!
+    \[Am]Péter, ne \[Em]s{\_{í}}rj, hisz' \[H7]tudod, hogy megbo\[Em]csát!
   \endchorus
 
   \beginverse
     ^Gyengeségünk néha úgy esik ránk,
     Mint kisgyermekre esik a ^féle^lem.
-    ^Gyengeségért mindig bünte^tés jár,
+    ^Gyengeségért mindig bünte^t{\_{é}}s jár,
     De ^büntetése ^nem sújt, fele^mel!
   \endverse
 
@@ -26,7 +26,7 @@
   \beginverse
     ^Reménytelen a bűn után az élet,
     Hogy mégis élsz, már alig ^hiszed ^el,
-    ^Alig hiszed, hogy nem lett akkor ^vége,
+    ^Alig hiszed, hogy nem lett akkor ^v{\_{é}}ge,
     Csak ^egyet tudsz, a ^hulló könnye^ket!
   \endverse
 
