--- a/songs/rejts-most-el.tex
+++ b/songs/rejts-most-el.tex
@@ -5,20 +5,20 @@
 
   \beginverse\memorize
     \[C]Rejts \[G/H]most \[Am]el a \[F]szár\[D/F#]nyad a\[G]lá,
-    E\[C]rős \[G]kéz\[F]zel \[Dm]takarj \[D]be en\[G]gem!
+    E\[C]rős \[G]kéz\[F]zel \[Dm]takarj \[D]be \_{e}n\[G]gem!
   \endverse
 
   \beginchorus
-    \[C]Tenger tombol, \[F]zúg, süv\[G]ít a sz\[C]él,
+    \[C]Tenger tombol, \[F]zúg, süv\[G]{\_{í}}t a sz\[C]él,
     \[C]Te emelsz fel \[F]a vih\[G]ar fö\[Am]lé!
-    \[C]Uralkodsz hul\[F]lámok h\[G]abja\[C]in,
+    \[C]Uralkodsz hul\[F]lámok h\[G]{\_{a}}bja\[C]in,
     \[C]Szívem nem f\[F]él, Benn\[G]ed rem\[Am]él!
     \[C]Szívem nem f\[F]él, Benn\[G]ed rem\[F]él! \[G]
   \endchorus
 
   \beginverse
-    Csak ^Is^ten^ben bízz, ^én ^lel^kem!
-    ^Mert ^Ő ^él, és ^nagyobb ^minden^nél!
+    Csak ^Is^ten^ben bízz, ^én ^l{\_{e}}l^kem!
+    ^Mert ^Ő ^él, és ^nagyobb ^mind\_{e}n^nél!
   \endverse
 
   \beginverse*
