--- a/songs/teremts-bennem.tex
+++ b/songs/teremts-bennem.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse*
-    /: \[G]Teremts bennem \[D]tiszta szí\[C]vet, ó U\[G]ram!
+    /: \[G]Teremts bennem \[D]tiszt\_{a} szí\[C]vet, \_{ó} U\[G]ram!
     Az \[Em]erős lelket \[D]újítsd meg ben\[G-C]nem! \[G] :/ \rep{2}
   \endverse
 
