--- a/songs/urra-var-a-szivunk.tex
+++ b/songs/urra-var-a-szivunk.tex
@@ -1,7 +1,7 @@
-\beginsong{Az Úrra vár a szivünk}[]
+\beginsong{Az Úrra vár a szívünk}[]
 
   \beginverse*
-    Az \[Dm]Úrra \[C]vár a szi\[F]vünk,
+    Az \[Dm]Úrra \[C]vár a szí\[F]vünk,
     Ő\[Gm]benne \[Dm]minden \[A]örö\[Dm]münk.
   \endverse
 
