--- a/songs/utad-var-rad.tex
+++ b/songs/utad-var-rad.tex
@@ -12,7 +12,7 @@
   \beginverse\memorize
     \[Dm]Mélyen a \[A]lelkedben egy \[Dm]tiszta fo\[C]lyó,
     Amit \[F]áradni \[Gm]érzel, Ő a \[C]Mindenha\[Dm]tó.
-    \[Dm]Isteni \[A]üzenet az \[Dm]éjben a \[C]fény,
+    \[Dm]Isteni \[A]üzenet az \[Dm]éjben a \[C]f{\_{é}}ny,
     \[F]Királysága \[Gm]már a \[C]szívedben \[Dm]él!
   \endverse
 
@@ -20,13 +20,13 @@
     Utad \[F]vár \[C]rád, \[Gm]indulj \[Dm]hát!
     \[F]Nálad van a \[Gm]kincs, mire \[C]mindenki \[Dm]vágy,
     Utad \[F]vár \[C]rád, \[Gm]indulj \[Dm]hát!
-    \[F]Benned az \[G]isteni \[Gm]tűz a földre \[Dm]száll.
+    \[F]Benned az \[G]isteni \[Gm]tűz a földre \[Dm]sz{\_{á}}ll.
   \endchorus
 
   \beginverse
-    ^Reménységed ^forrása ^égi A^tyád,
-    ^Szeretetének ^nincs, ki ^ellen^áll.
-    ^Te lehetsz a ^fénylő jel a ^hegy tete^jén,
+    ^Reménységed ^forrása ^égi A^ty{\_{á}}d,
+    ^Szeretetének ^nincs, ki ^{\_{e}}llen^áll.
+    ^Te lehetsz a ^fénylő jel a ^hegy tete^j{\_{é}}n,
     ^Te lehetsz, ki ^elviszed az ^üzene^tét.
   \endverse
 
