--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -14,7 +14,7 @@
 
   \beginchorus
     Oh, oh, \[E7]oh!
-    Hol van az {\[Am G F]ú}t? \[E]Hol van a f{\[Am G F]é}ny, \[E]az igazs{\[Am G F]á}g,
+    Hol van az {\[Am G F]{\_{ú}}}t? \[E]Hol van a f{\[Am G F]{\_{é}}}ny, \[E]az igazs{\[Am G F]{\_{á}}}g,
     Ami haza\[E]visz? Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endchorus
 
@@ -34,7 +34,7 @@
   \beginverse
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált, \rep{3}
     Oh, oh, \[E7]oh!
-    Én vagyok az {\[Am G F]ú}t, \[E]az igazs{\[Am G F]á}g, és az él{\[Am G F]e}t,
+    Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, és az él{\[Am G F]{\_{e}}}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
@@ -44,7 +44,7 @@
 
   \beginverse*
     Oh, oh, \[E7]oh!
-    Én vagyok az {\[Am G F]ú}t, \[E]az igazs{\[Am G F]á}g, és az él{\[Am G F]e}t,
+    Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, és az él{\[Am G F]{\_{e}}}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
