--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -11,12 +11,12 @@
 
   \beginverse\memorize
     \[Hm] Meghívtál, hogy vízre \[D]lépjek, hol nélkü\[A]led elsüllye\[G]dek.
-    \[Hm] Ebben megtalállak \[D]Téged, a mélység\[A]ben megtart hi\[G]tem.
+    \[Hm] Ebben megtalállak \[D]Téged, a mélység\[A]ben megt\_{a}rt hi\[G]tem.
   \endverse
 
   \beginchorus
-    \[G] Nagy ne\[D]ved hívom \[A]én \[A4] \[G] és felné\[D]zek a vizek fö\[A]lé.
-    Ott látlak \[G]én. A lelkem \[D]benned megpi\[A]hen. Enyém \[G]vagy és \[A]én \[Hm]Tied.
+    \[G] Nagy ne\[D]ved h\_{í}vom \[A]én \[A4] \[G] és felné\[D]zek a vizek fö\[A]lé.
+    Ott l\_{á}tlak \[G]én. A lelkem \[D]benned m\_{e}gpi\[A]hen. Enyém \[G]vagy és \[A]én \[Hm]Tied.
   \endchorus
 
   \beginverse
