--- a/songs-extra/koszonjuk-neked-urunk.tex
+++ b/songs-extra/koszonjuk-neked-urunk.tex
@@ -1,7 +1,7 @@
 \beginsong{Köszönjük Néked, Urunk}[]
 
   \beginverse*\memorize
-    \[G]Köszönjük Néked, \[C]Urunk, _____-t, \[G] köszönjük Néked \[D]örökké,
+    \[G]Köszönjük Néked, \[C]Urunk, _____-t, \[G] köszönjük Néked \[D]örökk\_{é},
     \[G]Ó, Urunk, mi \[C]nem hagyjuk el őt, és \[G]Veled \[D]dalol\[G]juk: \echo{Együtt, mindenki!}
   \endverse
 
