--- a/songs-extra/jo-atyank-koszonjuk-neked.tex
+++ b/songs-extra/jo-atyank-koszonjuk-neked.tex
@@ -13,7 +13,7 @@
 
   \beginverse*
     ^Áldj meg minket, Krisztusunk,
-    a ^Lelked legyen közöttünk míg ^együtt ^vagyunk! ^ ^
+    A ^Lelked legyen közöttünk míg ^együtt ^vagyunk! ^ ^
   \endverse
 
   \ifchorded
