--- a/songs-mass/dicsoseg-k159.tex
+++ b/songs-mass/dicsoseg-k159.tex
@@ -20,7 +20,7 @@
     Mert \[D]egyedül Te vagy a \[D]Szent, Te vagy az \[A]Úr,
     Te vagy az \[F#m]egyetlen Föl\[E]ség, Jézus \[A]Krisztus,
     A \[F#m]Szentlélekkel \[Hm]együtt, az \[E]Atyaisten \[E]dicsőségé\[A]ben. \[G]
-    \[A]A\[D]men.
+    \[A]{\_{A}}\[D]men.
   \endverse
 
 \endsong
