--- a/songs-mass/szent-vagy-k192.tex
+++ b/songs-mass/szent-vagy-k192.tex
@@ -10,7 +10,7 @@
   \fi
 
   \beginverse\memorize
-    Szent vagy, \[C]szent vagy, szent vagy, \[G7]szent vagy
+    Szent vagy, \[C]szent vagy, szent vagy, \[G7]sz{\_{e}}nt vagy
     Minden\[F]ségnek Ura, \[G]Istene \[C]
     \[C7] Dicső\[F]séged betölti a menny\[Em]et, és a föld\[Am]et
     Hozsan\[Dm]na \[G] a magas\[G7]ság\[C]ban!
@@ -19,7 +19,7 @@
   \beginverse
     Szent vagy, ^szent vagy, szent vagy, ^szent vagy
     Minden^ségnek Ura, ^Istene ^
-    ^ Ó-ó ^áldott, ki az Úr nevében ^eljön mihoz^zánk
+    ^ \_{Ó} ^áldott, ki az Úr nevében ^eljön mihoz^zánk
     Hozsan^na ^ a magas^ság^ban!
   \endverse
 
