Eszter finished adding melisma notations (#4)
* Update jezus-a-mi-oltalmunk.tex

Hajlítások, előjáték és pontosítások Istivel

* Update jezus-nez-ram.tex

Sortörés, nagybetű

* Update jo-az-urban-bizakodni.tex

Hajlítások

* Update jojj-hivunk-jojj.tex

Hajlítások és akkordok javítása Istivel

* Update jojj-itt-az-ido.tex

Hajlítások

* Update kesz-az-en-szivem.tex

Hajlítások

* Update kiraly-vagy.tex

Hajlítások

* Update koszonom-jezus.tex

Hajlítások

* Update latod-ujra-este-van.tex

Hajlítások

* Update lelkem-aldd-az-urat.tex

Hajlítások (?)

* Update loyolai-szent-ignac-imaja.tex

Hajlítások

* Update latod-ujra-este-van.tex

Akkord pontosítás Istivel

* Update melybol-hozzad-szall-szavam.tex

Hajlítások

* Update mert-tudom.tex

Hajlítások

* Update minden-mi-el.tex

Hajlítások

* Update minden-nap.tex

Hajlítások

* Update mint-az-asszony.tex

Hajlítások

* Update most-nem-sietek.tex

Hajlítások

* Update napfiver-holdnover.tex

Hajlítások

* Update ne-felj-mert-megvaltottalak.tex

Hajlítások

* Update neked-hodolok.tex

Hajlítások

* Update oly-jo-aldani.tex

Hajlítás, helyesírás

* Update ott-lelegzel-a-fakban.tex

Hajlítások

* Update peter-ne-sirj.tex

Hajlítások

* Update rejts-most-el.tex

Hajlítások

* Update szentlelek-jojj.tex

Helyesírás jav.

* Update teremts-bennem.tex

Hajlítások

* Update urra-var-a-szivunk.tex

Helyesírás jav.

* Update utad-var-rad.tex

Hajlítások

* Update vak-ember.tex

Hajlítások

* Update vizek-felett.tex

Hajlítások

* Update koszonjuk-neked-urunk.tex

Hajlítás

* Update jo-atyank-koszonjuk-neked.tex

Egy nagybetű

* Update dicsoseg-k159.tex

Hajlítás

* Update szent-vagy-k192.tex

Hajlítások

--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -2,35 +2,28 @@
 
   \beginverse\memorize
     \[C] Látod, újra este van, Hozzád száll most \[C/H]halk sza\[Am]vam,
-    \[Dm] Mindenségnek Iste\[F]ne, \[G] Téged dicsér éne\[C]kem.
+    \[Dm] Mindenségnek Iste\[F]n\[G]{\_{e}}, Téged dicsér éne\[C]kem.
   \endverse
 
   \beginverse
     ^ Köszönöm ezt a napot, annyi szépet s ^jót ho^zott.
-    ^ Köszönöm a napsü^té^st, fényét szórta szerte^szét.
+    ^ Köszönöm a napsü^t\_{é}^st, fényét szórta szerte^szét.
   \endverse
 
   \beginchorus
     \[C]Kérlek, ó jó Uram, \[Dm]add meg, fényeddé \[F]váljak, jeled le\[C]hessek!
-    \[C]Kérlek, Szentlelked \[Dm]küldd el, Ő ve\[F]zessen \[G]végig élete\[C]men!
+    \[C]Kérlek, Szentl\_{e}lked \[Dm]küldd el, \_{Ő} ve\[F]zessen \[G]végig élete\[C]men!
   \endchorus
 
   \beginverse
     ^ Uram, mindent köszönök, bánatot é^s örö^möt,
-    ^ Legyen rajtam szent ke^ze^d, óvja, védje éle^tem!
+    ^ Legyen rajtam szent ke^z\_{e}^d, óvja, védje éle^tem!
   \endverse
 
   \beginverse
     ^ Szeretném, ha szeretnél, minden szavad ^érte^ném,
-    ^ Életemben követ^né^m, s végül Hozzád érkez^ném.
+    ^ Életemben követ^n{\_{é}}^m, s végül Hozzád érkez^ném.
   \endverse
 
   \beginverse*
     Refrén
-  \endverse
-
-  \beginverse*
-    1. versszak \ifchorded{\nolyrics (Csak lehúzásokkal.)}\fi
-  \endverse
-
-\endsong
