Changed the logo and fixed latod-ujra-este-van

--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -27,3 +27,10 @@
 
   \beginverse*
     Refrén
+  \endverse
+
+  \beginverse*
+    1. versszak \ifchorded{\nolyrics (Csak lehúzásokkal.)}\fi
+  \endverse
+
+\endsong
