--- a/songs/aldott-legy-uram.tex
+++ b/songs/aldott-legy-uram.tex
@@ -1,4 +1,7 @@
-\beginsong{Áldott légy, Uram}[]
+\beginsong{Áldott légy, Uram}
+[
+  by={Taizé / Jacques Berthier}
+]
 
   \beginverse*
     \[Dm]Áldott \[G]légy, U\[Dm]ram, szent \[A#]neved \[C]áldja \[F]lelkem! \[A]
