--- a/songs/jezus-eletem-erom-bekem.tex
+++ b/songs/jezus-eletem-erom-bekem.tex
@@ -1,5 +1,7 @@
-\beginsong{Jézus életem, erőm, békém}[]
-
+\beginsong{Jézus életem, erőm, békém}
+[
+  by={Taizé / Jacques Berthier}
+]
   \beginverse*
     \[Dm]Jé\[C]zus \[F]életem, erőm, \[A#]bé\[C]kém,
     \[Dm]Jé\[C]zus \[F]társam, \[Dm]örö\[C]möm,
