--- a/songs/jo-az-urban-bizakodni.tex
+++ b/songs/jo-az-urban-bizakodni.tex
@@ -1,4 +1,7 @@
-\beginsong{Jó az Úrban bizakodni}[]
+\beginsong{Jó az Úrban bizakodni}
+[
+  by={Taizé / Jacques Berthier}
+]
 
   \beginverse*
     \[Dm]Jó az Úrban \[A]bizakodni, \[Dm]j\[C]ó az \[F]Úr.
