--- a/songs/ne-felj-ne-aggodj.tex
+++ b/songs/ne-felj-ne-aggodj.tex
@@ -1,4 +1,7 @@
-\beginsong{Ne félj, ne aggódj}[]
+\beginsong{Ne félj, ne aggódj}
+[
+  by={Taizé / Jacques Berthier}
+]
 
   \beginverse*
     \[Am]Ne félj, ne \[Dm7]aggódj, \[G]ne sírj, ne \[Cmaj7]bánkódj:
