--- a/songs/szamtalan-a-csoda.tex
+++ b/songs/szamtalan-a-csoda.tex
@@ -1,4 +1,7 @@
-\beginsong{Számtalan a csoda}[]
+\beginsong{Számtalan a csoda}
+[
+  by={Gen Rosso}
+]
 
   \beginverse*\memorize
    \[C]Számtal\[G]an a csoda, \[Dm] amit m\[Am]űvelt az Úr!
