--- a/songs/urra-var-a-szivunk.tex
+++ b/songs/urra-var-a-szivunk.tex
@@ -1,4 +1,7 @@
-\beginsong{Az Úrra vár a szivünk}[]
+\beginsong{Az Úrra vár a szivünk}
+[
+  by={Taizé / Jacques Berthier}
+]
 
   \beginverse*
     Az \[Dm]Úrra \[C]vár a szi\[F]vünk,
