--- a/songs/varj-es-ne-felj.tex
+++ b/songs/varj-es-ne-felj.tex
@@ -1,4 +1,7 @@
-\beginsong{Várj és ne félj}[]
+\beginsong{Várj és ne félj}
+[
+  by={Taizé / Jacques Berthier}
+]
 
   \beginverse*
     \[Em]Várj és ne \[C]félj, az \[Am6]Úr jön \[H7]már!
