--- a/songs/beke-napja-kozel.tex
+++ b/songs/beke-napja-kozel.tex
@@ -1,4 +1,7 @@
 \beginsong{A béke napja közel}[]
+[
+  by={Borka Zsolt}
+]
 
   \beginverse*
     A \[F]béke \[C]napja köz{\[Dm A#]e}l, \[F]nézd, már \[A#]fénylik a \[C]jel! \[C7]
