--- a/songs/vilagnak-krisztus-kell.tex
+++ b/songs/vilagnak-krisztus-kell.tex
@@ -1,5 +1,7 @@
-\beginsong{A világnak Krisztus kell}[]
-
+\beginsong{A világnak Krisztus kell}
+[
+  by={Sillye Jenő}
+]
   \ifchorded
     \beginverse*
       {\nolyrics Előjáték: \[E] \[H7] \[E] \[A] \[E]}
