--- a/songs/elhoztuk_oltarodra.tex
+++ b/songs/elhoztuk_oltarodra.tex
@@ -6,7 +6,7 @@
   \beginverse*\memorize
 \[Am]Elhoztuk \[G]oltárodra \[F]napunk m\[E]inden \[Am]percét,
 amink  csak \[G]van, mind \[F]felajánljuk Tenek\[E]ed.
-Sz\[Am]épségét, \[G]örömét, és \[F]fájdalm\[E]át a n\[Am]apnak,
+Sz\[Am]épségét, \[G]örömét és \[F]fájdalm\[E]át a n\[Am]apnak,
 Urunk, itt van: \[G]letesszük színed el\[Am]é.
 \endverse
 
