--- a/songs/elhoztuk_oltarodra.tex
+++ b/songs/elhoztuk_oltarodra.tex
@@ -1,11 +1,9 @@
 \beginsong{Elhoztuk oltárodra}
-[
-  by={Gen Rosso}
-]
+[by={Gen Rosso}]
 
   \beginverse*\memorize
 \[Am]Elhoztuk \[G]oltárodra \[F]napunk m\[E]inden \[Am]percét,
-amink  csak \[G]van, mind \[F]felajánljuk Tenek\[E]ed.
+amink csak \[G]van, mind \[F]felajánljuk Tenek\[E]ed.
 Sz\[Am]épségét, \[G]örömét és \[F]fájdalm\[E]át a n\[Am]apnak,
 Urunk, itt van: \[G]letesszük színed el\[Am]é.
 \endverse
