--- a/songs/elhetunk.tex
+++ b/songs/elhetunk.tex
@@ -1,4 +1,6 @@
-\beginsong{Élhetünk (Liberi)}[by={Gen Rosso}]
+\beginsong{Élhetünk (Liberi)}
+[by={Gen Rosso}]
+%https://www.youtube.com/watch?v=b3JuAps_zPs
 
   \beginchorus
 \[D]Élhetünk, szab\[G]addá lett az \[A]\_{é}letünk,\[H]
