--- a/songs/egi_kenyer.tex
+++ b/songs/egi_kenyer.tex
@@ -1,8 +1,10 @@
-\beginsong{Égi kenyér}[by={Gen Rosso}]
+\beginsong{Égi kenyér}
+[by={Gen Rosso}]
+%https://www.youtube.com/watch?v=zvVSpXLy8jA
 
   \beginchorus
-	\[D]Jézus, Te \[F#m]vagy az \[G]égi keny\[D]ér.
-	\[Hm]Olyanná for\[Em]málsz, \[G]mint amily\[D]en Te vagy.
+\[D]Jézus, Te \[F#m]vagy az \[G]égi keny\[D]ér.
+\[Hm]Olyanná for\[Em]málsz, \[G]mint amily\[D]en Te vagy.
   \endchorus
 
   \beginverse\memorize
