--- a/songs/mily_gyonyoru.tex
+++ b/songs/mily_gyonyoru.tex
@@ -1,5 +1,6 @@
 \beginsong{Mily gyönyörű dicsérni téged}
-[by={Gen Rosso}]
+[by={Gen Verde}]
+%https://www.youtube.com/watch?v=uLNAoQxUq4E
 
   \beginchorus
   \[G]Mily gy\[D]önyörű \[C]dicsérni \[G]Téged!
