Included and fixed songs added by Mario

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -37,7 +37,7 @@
 \setlength{\textwidth}{13cm}
 \setlength{\textheight}{18cm}
 
-\setlength{\songnumwidth}{1cm}
+\setlength{\songnumwidth}{1.02cm}
 \setlength{\versenumwidth}{0.5cm}
 % \setlength{\cbarwidth}{0.1cm}
 
@@ -98,6 +98,6 @@
   \vspace*{\fill}
   % \vfill
   Készítette: Balics Eszter és Donkó István
-  % ?Lektorálta: Nobilis Márió?
+  Lektorálta: Nobilis Márió
 
 \end{document}
