--- a/songs.tex
+++ b/songs.tex
@@ -1,5 +1,6 @@
 \input{songs/add-tovabb.tex}
 \input{songs/adjunk-halat.tex}
+\input{songs/aldalak-jo-uram.tex}
 \input{songs/aldasoddal-megyunk.tex}
 \input{songs/aldjad-en-lelkem-az-urat.tex}
 \input{songs/aldjatok-az-urat.tex}
@@ -18,9 +19,14 @@
 \input{songs/boldogsag-orom.tex}
 \input{songs/csak-jezusnak-szolgalok.tex}
 \input{songs/ebredj-ember.tex}
+\input{songs/egi-kenyer.tex}
 \input{songs/egyutt-fog-ujjongni.tex}
+\input{songs/elhetunk.tex}
+\input{songs/elhoztuk-oltarodra.tex}
+\input{songs/elkezdem-ujbol.tex}
 \input{songs/en-uram-en-istenem.tex}
 \input{songs/feny-ami-bennem-eg.tex}
+\input{songs/fogadd-el-mit-ajandekul-hoztunk.tex}
 \input{songs/foltamadt-alleluja.tex}
 \input{songs/gyertek-dicserjuk-egyutt.tex}
 \input{songs/ha-jon-az-ur.tex}
@@ -29,6 +35,7 @@
 \input{songs/hazamegy-a-vandor.tex}
 \input{songs/hus-ver-templom.tex}
 \input{songs/im-itt-jon-o.tex}
+\input{songs/im-jovunk-hozzad.tex}
 \input{songs/ime-az-isten-satora.tex}
 \input{songs/indulj-a-vilagba.tex}
 \input{songs/indulj-es-menj.tex}
@@ -53,9 +60,11 @@
 \input{songs/melybol-hozzad-szall-szavam.tex}
 \input{songs/mennek-az-asszonyok.tex}
 \input{songs/mert-tudom.tex}
+\input{songs/mily-gyonyoru-dicserni-teged.tex}
 \input{songs/minden-mi-el.tex}
 \input{songs/minden-nap.tex}
 \input{songs/mint-az-asszony.tex}
+\input{songs/mint-maria.tex}
 \input{songs/most-nem-sietek.tex}
 \input{songs/mustarmag.tex}
 \input{songs/napfiver-holdnover.tex}
@@ -74,7 +83,10 @@
 \input{songs/szamtalan-a-csoda.tex}
 \input{songs/szentlelek-jojj.tex}
 \input{songs/szeretem-orokke.tex}
+\input{songs/szeretnelek-megtalalni.tex}
+\input{songs/szuntelenul-neked-eneklek-maria.tex}
 \input{songs/tancolj-az-urnak.tex}
+\input{songs/taplalo-szent-kenyer.tex}
 \input{songs/terad-var-egy-szep-orszag.tex}
 \input{songs/teremts-bennem.tex}
 \input{songs/tied-a-dicsoseg.tex}
@@ -84,6 +96,7 @@
 \input{songs/utad-var-rad.tex}
 \input{songs/vak-ember.tex}
 \input{songs/varj-es-ne-felj.tex}
+\input{songs/varsz-rank.tex}
 \input{songs/vilagnak-krisztus-kell.tex}
 \input{songs/virrassz-meg.tex}
 \input{songs/vizek-felett.tex}
