--- a/songs/elhetunk.tex
+++ b/songs/elhetunk.tex
@@ -1,32 +1,34 @@
-\beginsong{Élhetünk (Liberi)}
-[by={Gen Rosso}]
-%https://www.youtube.com/watch?v=b3JuAps_zPs
+\beginsong{Élhetünk \\ Liberi}
+[
+  by={Gen Rosso}
+]
+  %https://www.youtube.com/watch?v=b3JuAps_zPs
 
   \beginchorus
-\[D]Élhetünk, szab\[G]addá lett az \[A]\_{é}letünk,\[H]
-mert \[D]már a sz\[A]eretet \[D]\_{é}ltet.
-\[D]Élhetünk, sza\[G]baddá tetted \[D]\_{é}letünk,\[A]
-mert \[D]Te vagy \[A]maga az \[D]\_{é}let!
+    \[D]Élhetünk, sza\[G]baddá lett az \[A]{\_{é}}le\[G]tünk,
+    mert \[D]már a \[A]szeretet \[D]{\_{é}}ltet.
+    \[D]Élhetünk, sza\[G]baddá tetted \[D]{\_{é}}le\[G]tünk,
+    mert \[D]Te vagy \[A]maga az \[D]{\_{é}}let!
   \endchorus
 
   \beginverse\memorize
-\[G]Éltünk mi is félelemben, \[D]keserűségben,
-\[Em]elcsüggesztett, rabbá tett az \[D]aggodalom,
-\[Hm]de a szívünk szorongása \[A]a Te erődben
-\[G]összetört és \[A]messzetűnt,
-\[G]és az öröm, melyet adtál, \[A]kiárad a földre!
+    \[G]Éltünk mi is félelemben, \[D]keserűségben,
+    \[Em]Elcsüggesztett, rabbá tett az \[D]aggodalom,
+    \[Hm]De a szívünk szorongása \[A]a Te erődben
+    \[G]Összetört és \[A]messzetűnt,
+    \[G]És az öröm, melyet adtál, \[A]kiárad a \[A4]Földre!
  \endverse
- 
+
   \beginverse*
     Refrén
   \endverse
 
   \beginverse
-  ^Fénysugár, mely megvilágít ^mindent a Földön,
-  ^tűz, amely kigyullad ott, ah^ova Te lépsz,
-  ^lánc, amely a szeretetben ^épül egésszé,
-  mely ^összefűz és ^egyesít:
-  ^ez az öröm, melyet adtál, ^kiárad a Földre!
+    ^Fénysugár, mely megvilágít ^mindent a Földön,
+    ^Tűz, amely kigyullad ott, a^hova Te lépsz,
+    ^Lánc, amely a szeretetben ^épül egésszé,
+    Mely ^összefűz és ^egyesít:
+    ^Ez az öröm, melyet adtál, ^kiárad a ^Földre!
   \endverse
 
   \beginverse*
@@ -34,11 +36,11 @@ mert \[D]Te vagy \[A]maga az \[D]\_{é}let!
   \endverse
 
  \beginverse
-  ^Új látóhatárok nyílnak ^Veled előttünk,
-  ^minden embert rabul ejt a sz^ereteted.
-  ^Kicsírázik szívünkben a ^belévetett mag,
-  gyüm^ölcse fény és ^új remény,
-  ^igaz öröm, mely belőlünk ^kiárad a Földre!
+    ^Új látóhatárok nyílnak ^Veled előttünk,
+    ^Minden embert rabul ejt a ^szereteted.
+    ^Kicsírázik szívünkben a ^belévetett mag,
+    Gyü^mölcse fény és ^új remény,
+    ^Igaz öröm, mely belőlünk ^kiárad a ^Földre!
   \endverse
 
   \beginverse*
