--- a/songs/aldott-legy-uram.tex
+++ b/songs/aldott-legy-uram.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse*
-    \[Dm]Áldott \[G]légy, U\[Dm]ram, szent \[A#]neved \[C]áldja \[F]lelkem! \[A]
+    \[Dm]Áldott \[G]légy, U\[Dm]ram, szent \[A#]neved \[C]áldja \[F]lel\[A]kem!
     \[Dm]Áldott \[G]légy, U\[Dm]ram, mert \[A#]megvál\[C]tottál \[Dm]már.
   \endverse
 
